# dagster-scaleway

./: .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml  publish.yml
dagster_scaleway/: __init__.py  cli.py  serverless_job_context.py  serverless_job_launcher.py
examples/hello_dagster_scaleway/: Dockerfile  README.md  dagster.yaml  hello-dagster.py
examples/terraform/: .terraform.lock.hcl  README.md  main.tf
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/docker/: base-requirements.txt  code.Dockerfile  daemon.Dockerfile  index.html  supervisord.conf  webserver-requirements.txt  webserver.Dockerfile
terraform/templates/: dagster.yaml.tpl  extra-requirements.txt.tpl  workspace.yaml.tpl
