[tool.poetry]
name = "dagster-scaleway"
version = "0.1.0"
description = ""
authors = ["Andy Méry <amery@scaleway.com>"]
readme = "README.md"
packages = [{ include = "dagster_scaleway"}]

[tool.poetry.scripts]
dagster-scaleway = "dagster_scaleway.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
scaleway = { git = "https://github.com/scaleway/scaleway-sdk-python", subdirectory = "scaleway" }
dagster = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
pre-commit = "^2.21.0"
dagit = "^1.6.0"
ruff = "^0.1.6"

[tool.poetry.group.examples.dependencies]
pandas = "^1.5.2"
dagster-postgres = "^0.21.9"
dagster-aws = "^0.21.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
